# mem_speed_test

mainmem/: .gitignore  CMakeLists.txt  Readme.md  main.cpp
mainmem/FastMemcpy-master/: FastMemcpy_Avx.h
mem-timing/: CMakeLists.txt  main.cpp
opencl/: .gitignore  CMakeLists.txt  Readme.md  angle-win-x64.7z  app.manifest  colorconv.cpp  colorconv_dx.cpp  colorconv_gles.cpp  colorconv_runtest.h  do_opencltest.cpp  empty_kernel.cpp  main.cpp  speed_metrics.h
picrotate/: CMakeLists.txt  Readme.md  main.cpp
